--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
-
+    
 <header class="header">
     <h1>Torneo de Ajedrez</h1>
 </header>
@@ -54,7 +54,7 @@
     <img src=img/1.jpg alt="Descripción de la imagen">
 </div>
 <footer class="footer">
-    <p>Asociación de alumnos - IES Ciudad Escolar</p>
+    <p>Asociación de alumnos - IES Ciudad Escolar ©</p>
 </footer>
 
 <script src="script.js"></script>
