--- a/index.html
+++ b/index.html
@@ -14,23 +14,12 @@
 </header>
 
 <main class="main">
-
+<br>
     <a href="https://www.instagram.com/estudiantesaece?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" target="_blank" class="instagram-link">Visita nuestro Instagram</a>
-    <section class="tabla-section">
-        <h2>Tabla de Partidas</h2>
-        <table id="partidas">
-            <thead>
-                <tr>
-                    <th>Día</th>
-                    <th>Enfrentamientos</th>
-                </tr>
-            </thead>
-            <tbody>
-                <!-- Aquí se generarán las filas de la tabla dinámicamente -->
-            </tbody>
-        </table>
-    </section>
-
+<br>
+<section class="descripcion">
+    <p>Nota: El ganador con más puntos será el que tenga color de oro y al finalizar el torneo será el ganador. <br><br> ¡¡SUERTE A TODOS!!</p>
+</section>
     <section class="tabla-section">
         <h2>Tabla de Puntos</h2>
         <table id="puntos">
@@ -49,6 +38,42 @@
 </main>
 
 
+    <section class="tabla-section">
+        <h2>Tabla de Partidas</h2>
+        <table id="partidas">
+            <thead>
+                <tr>
+                    <th>Día</th>
+                    <th>Enfrentamientos</th>
+                </tr>
+            </thead>
+            <tbody>
+                <!-- Aquí se generarán las filas de la tabla dinámicamente -->
+            </tbody>
+        </table>
+    </section>
+<br>
+
+<section class="descripcion">
+    <p>Nota: Las fechas de las partidas son aproximadas y pueden sufrir cambios según la disponibilidad de los participantes. Se considerará ausencia si un jugador no se presenta, sin previo aviso, lo que resultará en pérdida de la partida.</p>
+</section>
+<br>
+<section class="tabla-section">
+    <h2>Resultados de las Partidas</h2>
+    <table id="resultados">
+        <thead>
+            <tr>
+                <th>Día</th>
+                <th>Enfrentamiento</th>
+                <th>Ganador</th>
+            </tr>
+        </thead>
+        <tbody>
+            <!-- Aquí se mostrarán los resultados de las partidas -->
+        </tbody>
+    </table>
+</section>
+<br>
 
 <div class="image-container">
     <img src=img/1.jpg alt="Descripción de la imagen">
