--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <tr>
                     <th>Jugador</th>
                     <th>Puntos</th>
-                    <th>Partidas Jugadas</th>
+                    <th>Partidas Ganadas</th>
                 </tr>
             </thead>
             <tbody>
