--- a/index.html
+++ b/index.html
@@ -28,11 +28,13 @@
                     <th>Jugador</th>
                     <th>Puntos</th>
                     <th>Partidas Ganadas</th>
+                    <th>Partidas Jugadas</th> <!-- Nueva columna -->
                 </tr>
             </thead>
             <tbody>
-                <!-- Aquí se generarán las filas de la tabla dinámicamente -->
+                <!-- Filas de la tabla -->
             </tbody>
+        </table>
         </table>
     </section>
 </main>
