--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <a href="https://www.instagram.com/estudiantesaece?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" target="_blank" class="instagram-link">Visita nuestro Instagram</a>
 <br>
 <section class="descripcion">
-    <p>Nota: El ganador con más puntos será el que tenga color de oro y al finalizar el torneo será el ganador. <br><br> ¡¡SUERTE A TODOS!!</p>
+    <p>Nota: El ganador con más puntos será el que tenga color de oro y al finalizar el torneo será el ganador.<br> La final sumará 10 puntos  <br><br> ¡¡SUERTE A TODOS!!</p>
 </section>
     <section class="tabla-section">
         <h2>Tabla de Puntos</h2>
